Automatically deregister nodes from core with attestations (#76)
* Implement validator registration attestations

* bugfixes

* Block height validation

* Do not register during sync

* Add new registration type to abci

* Use attestation oneof model

* Modify grpc post endpoint

* Better protobuf field numbering

* fix test

* Increase legacy registration cutoff to the future

* Deregistration attestations
