# pkg/core/gen/core_proto/protocol.swagger.json
@@ -16,6 +16,70 @@
     "application/json"
   ],
   "paths": {
+    "/core/grpc/attest/deregistration": {
+      "post": {
+        "operationId": "Protocol_GetDeregistrationAttestation",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protocolDeregistrationAttestationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "deregistration",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protocolValidatorDeregistration"
+            }
+          }
+        ],
+        "tags": [
+          "Protocol"
+        ]
+      }
+    },
+    "/core/grpc/attest/registration": {
+      "post": {
+        "operationId": "Protocol_GetRegistrationAttestation",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protocolRegistrationAttestationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "registration",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protocolValidatorRegistration"
+            }
+          }
+        ],
+        "tags": [
+          "Protocol"
+        ]
+      }
+    },
     "/core/grpc/block/{height}": {
       "get": {
         "operationId": "Protocol_GetBlock",
@@ -202,6 +266,23 @@
       },
       "additionalProperties": {}
     },
+    "protocolAttestation": {
+      "type": "object",
+      "properties": {
+        "signatures": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "validatorRegistration": {
+          "$ref": "#/definitions/protocolValidatorRegistration"
+        },
+        "validatorDeregistration": {
+          "$ref": "#/definitions/protocolValidatorDeregistration"
+        }
+      }
+    },
     "protocolBlockResponse": {
       "type": "object",
       "properties": {
@@ -240,6 +321,17 @@
             "type": "object",
             "$ref": "#/definitions/protocolTransactionResponse"
           }
+        }
+      }
+    },
+    "protocolDeregistrationAttestationResponse": {
+      "type": "object",
+      "properties": {
+        "signature": {
+          "type": "string"
+        },
+        "deregistration": {
+          "$ref": "#/definitions/protocolValidatorDeregistration"
         }
       }
     },
@@ -306,6 +398,17 @@
         }
       }
     },
+    "protocolRegistrationAttestationResponse": {
+      "type": "object",
+      "properties": {
+        "signature": {
+          "type": "string"
+        },
+        "registration": {
+          "$ref": "#/definitions/protocolValidatorRegistration"
+        }
+      }
+    },
     "protocolSignedTransaction": {
       "type": "object",
       "properties": {
@@ -319,7 +422,7 @@
           "$ref": "#/definitions/protocolTrackPlays"
         },
         "validatorRegistration": {
-          "$ref": "#/definitions/protocolValidatorRegistration"
+          "$ref": "#/definitions/protocolValidatorRegistrationLegacy"
         },
         "slaRollup": {
           "$ref": "#/definitions/protocolSlaRollup"
@@ -328,13 +431,16 @@
           "$ref": "#/definitions/protocolManageEntityLegacy"
         },
         "validatorDeregistration": {
-          "$ref": "#/definitions/protocolValidatorDeregistration"
+          "$ref": "#/definitions/protocolValidatorMisbehaviorDeregistration"
         },
         "storageProof": {
           "$ref": "#/definitions/protocolStorageProof"
         },
         "storageProofVerification": {
           "$ref": "#/definitions/protocolStorageProofVerification"
+        },
+        "attestation": {
+          "$ref": "#/definitions/protocolAttestation"
         }
       }
     },
@@ -478,10 +584,62 @@
         "pubKey": {
           "type": "string",
           "format": "byte"
+        },
+        "deadline": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "protocolValidatorMisbehaviorDeregistration": {
+      "type": "object",
+      "properties": {
+        "cometAddress": {
+          "type": "string"
+        },
+        "pubKey": {
+          "type": "string",
+          "format": "byte"
         }
       }
     },
     "protocolValidatorRegistration": {
+      "type": "object",
+      "properties": {
+        "delegateWallet": {
+          "type": "string"
+        },
+        "endpoint": {
+          "type": "string"
+        },
+        "nodeType": {
+          "type": "string"
+        },
+        "spId": {
+          "type": "string"
+        },
+        "ethBlock": {
+          "type": "string",
+          "format": "int64"
+        },
+        "cometAddress": {
+          "type": "string"
+        },
+        "pubKey": {
+          "type": "string",
+          "format": "byte"
+        },
+        "power": {
+          "type": "string",
+          "format": "int64"
+        },
+        "deadline": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "protocolValidatorRegistrationLegacy": {
       "type": "object",
       "properties": {
         "endpoint": {
