# pkg/core/gen/models/protocol_attestation.go
@@ -1,0 +1,163 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ProtocolAttestation protocol attestation
+//
+// swagger:model protocolAttestation
+type ProtocolAttestation struct {
+
+	// signatures
+	Signatures []string `json:"signatures"`
+
+	// validator deregistration
+	ValidatorDeregistration *ProtocolValidatorDeregistration `json:"validatorDeregistration,omitempty"`
+
+	// validator registration
+	ValidatorRegistration *ProtocolValidatorRegistration `json:"validatorRegistration,omitempty"`
+}
+
+// Validate validates this protocol attestation
+func (m *ProtocolAttestation) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateValidatorDeregistration(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateValidatorRegistration(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ProtocolAttestation) validateValidatorDeregistration(formats strfmt.Registry) error {
+	if swag.IsZero(m.ValidatorDeregistration) { // not required
+		return nil
+	}
+
+	if m.ValidatorDeregistration != nil {
+		if err := m.ValidatorDeregistration.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("validatorDeregistration")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("validatorDeregistration")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *ProtocolAttestation) validateValidatorRegistration(formats strfmt.Registry) error {
+	if swag.IsZero(m.ValidatorRegistration) { // not required
+		return nil
+	}
+
+	if m.ValidatorRegistration != nil {
+		if err := m.ValidatorRegistration.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("validatorRegistration")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("validatorRegistration")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this protocol attestation based on the context it is used
+func (m *ProtocolAttestation) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateValidatorDeregistration(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateValidatorRegistration(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ProtocolAttestation) contextValidateValidatorDeregistration(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.ValidatorDeregistration != nil {
+
+		if swag.IsZero(m.ValidatorDeregistration) { // not required
+			return nil
+		}
+
+		if err := m.ValidatorDeregistration.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("validatorDeregistration")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("validatorDeregistration")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *ProtocolAttestation) contextValidateValidatorRegistration(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.ValidatorRegistration != nil {
+
+		if swag.IsZero(m.ValidatorRegistration) { // not required
+			return nil
+		}
+
+		if err := m.ValidatorRegistration.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("validatorRegistration")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("validatorRegistration")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ProtocolAttestation) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ProtocolAttestation) UnmarshalBinary(b []byte) error {
+	var res ProtocolAttestation
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
