# pkg/core/gen/models/protocol_height_response.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ProtocolHeightResponse protocol height response
+//
+// swagger:model protocolHeightResponse
+type ProtocolHeightResponse struct {
+
+	// height
+	Height string `json:"height,omitempty"`
+}
+
+// Validate validates this protocol height response
+func (m *ProtocolHeightResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this protocol height response based on context it is used
+func (m *ProtocolHeightResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ProtocolHeightResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ProtocolHeightResponse) UnmarshalBinary(b []byte) error {
+	var res ProtocolHeightResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
