# pkg/core/gen/models/protocol_registration_attestation_response.go
@@ -1,0 +1,112 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ProtocolRegistrationAttestationResponse protocol registration attestation response
+//
+// swagger:model protocolRegistrationAttestationResponse
+type ProtocolRegistrationAttestationResponse struct {
+
+	// registration
+	Registration *ProtocolValidatorRegistration `json:"registration,omitempty"`
+
+	// signature
+	Signature string `json:"signature,omitempty"`
+}
+
+// Validate validates this protocol registration attestation response
+func (m *ProtocolRegistrationAttestationResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateRegistration(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ProtocolRegistrationAttestationResponse) validateRegistration(formats strfmt.Registry) error {
+	if swag.IsZero(m.Registration) { // not required
+		return nil
+	}
+
+	if m.Registration != nil {
+		if err := m.Registration.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("registration")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("registration")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this protocol registration attestation response based on the context it is used
+func (m *ProtocolRegistrationAttestationResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateRegistration(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ProtocolRegistrationAttestationResponse) contextValidateRegistration(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Registration != nil {
+
+		if swag.IsZero(m.Registration) { // not required
+			return nil
+		}
+
+		if err := m.Registration.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("registration")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("registration")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ProtocolRegistrationAttestationResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ProtocolRegistrationAttestationResponse) UnmarshalBinary(b []byte) error {
+	var res ProtocolRegistrationAttestationResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
